// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`viewManager/PlotView/store/viewDataUpdate data selection selectEpData empty state 1`] = `
Object {
  "ATT_BC_REVTCOUNT1": Object {
    "100120": Object {
      "refTime": 100120,
      "symbol": undefined,
      "valX": 100120,
      "value": 11.012,
      "x": 100120,
    },
    "100220": Object {
      "refTime": 100220,
      "symbol": undefined,
      "valX": 100220,
      "value": 11.022,
      "x": 100220,
    },
    "100320": Object {
      "refTime": 100320,
      "symbol": undefined,
      "valX": 100320,
      "value": 11.032,
      "x": 100320,
    },
    "100420": Object {
      "refTime": 100420,
      "symbol": undefined,
      "valX": 100420,
      "value": 11.042,
      "x": 100420,
    },
    "100520": Object {
      "refTime": 100520,
      "symbol": undefined,
      "valX": 100520,
      "value": 11.052,
      "x": 100520,
    },
    "100620": Object {
      "refTime": 100620,
      "symbol": undefined,
      "valX": 100620,
      "value": 11.062,
      "x": 100620,
    },
    "100720": Object {
      "refTime": 100720,
      "symbol": undefined,
      "valX": 100720,
      "value": 11.072,
      "x": 100720,
    },
    "100820": Object {
      "refTime": 100820,
      "symbol": undefined,
      "valX": 100820,
      "value": 11.082,
      "x": 100820,
    },
  },
  "max": Object {
    "ATT_BC_REVTCOUNT1": 11.082,
  },
  "maxTime": Object {
    "ATT_BC_REVTCOUNT1": 100820,
  },
  "min": Object {
    "ATT_BC_REVTCOUNT1": 11.012,
  },
  "minTime": Object {
    "ATT_BC_REVTCOUNT1": 100120,
  },
}
`;

exports[`viewManager/PlotView/store/viewDataUpdate data selection selectEpData state not empty 1`] = `
Object {
  "ATT_BC_REVTCOUNT1": Object {
    "100120": Object {
      "refTime": 100120,
      "symbol": undefined,
      "valX": 100120,
      "value": 11.012,
      "x": 100120,
    },
    "100220": Object {
      "refTime": 100220,
      "symbol": undefined,
      "valX": 100220,
      "value": 11.022,
      "x": 100220,
    },
    "100320": Object {
      "refTime": 100320,
      "symbol": undefined,
      "valX": 100320,
      "value": 11.032,
      "x": 100320,
    },
    "100420": Object {
      "refTime": 100420,
      "symbol": undefined,
      "valX": 100420,
      "value": 11.042,
      "x": 100420,
    },
    "100520": Object {
      "refTime": 100520,
      "symbol": undefined,
      "valX": 100520,
      "value": 11.052,
      "x": 100520,
    },
    "100620": Object {
      "refTime": 100620,
      "symbol": undefined,
      "valX": 100620,
      "value": 11.062,
      "x": 100620,
    },
    "100720": Object {
      "refTime": 100720,
      "symbol": undefined,
      "valX": 100720,
      "value": 11.072,
      "x": 100720,
    },
    "100820": Object {
      "refTime": 100820,
      "symbol": undefined,
      "valX": 100820,
      "value": 11.082,
      "x": 100820,
    },
  },
  "max": Object {
    "ATT_BC_REVTCOUNT1": 11.082,
    "OldTbdId": 102,
  },
  "maxTime": Object {
    "ATT_BC_REVTCOUNT1": 100820,
    "OldTbdId": 12,
  },
  "min": Object {
    "ATT_BC_REVTCOUNT1": 11.012,
    "OldTbdId": 101,
  },
  "minTime": Object {
    "ATT_BC_REVTCOUNT1": 100120,
    "OldTbdId": 10,
  },
}
`;

exports[`viewManager/PlotView/store/viewDataUpdate data selection selectEpData undefined state 1`] = `
Object {
  "ATT_BC_REVTCOUNT1": Object {
    "100120": Object {
      "refTime": 100120,
      "symbol": undefined,
      "valX": 100120,
      "value": 11.012,
      "x": 100120,
    },
    "100220": Object {
      "refTime": 100220,
      "symbol": undefined,
      "valX": 100220,
      "value": 11.022,
      "x": 100220,
    },
    "100320": Object {
      "refTime": 100320,
      "symbol": undefined,
      "valX": 100320,
      "value": 11.032,
      "x": 100320,
    },
    "100420": Object {
      "refTime": 100420,
      "symbol": undefined,
      "valX": 100420,
      "value": 11.042,
      "x": 100420,
    },
    "100520": Object {
      "refTime": 100520,
      "symbol": undefined,
      "valX": 100520,
      "value": 11.052,
      "x": 100520,
    },
    "100620": Object {
      "refTime": 100620,
      "symbol": undefined,
      "valX": 100620,
      "value": 11.062,
      "x": 100620,
    },
    "100720": Object {
      "refTime": 100720,
      "symbol": undefined,
      "valX": 100720,
      "value": 11.072,
      "x": 100720,
    },
    "100820": Object {
      "refTime": 100820,
      "symbol": undefined,
      "valX": 100820,
      "value": 11.082,
      "x": 100820,
    },
  },
  "max": Object {
    "ATT_BC_REVTCOUNT1": 11.082,
  },
  "maxTime": Object {
    "ATT_BC_REVTCOUNT1": 100820,
  },
  "min": Object {
    "ATT_BC_REVTCOUNT1": 11.012,
  },
  "minTime": Object {
    "ATT_BC_REVTCOUNT1": 100120,
  },
}
`;

exports[`viewManager/PlotView/store/viewDataUpdate viewRangeAdd should add points one point in middle 1`] = `
Object {
  "indexes": Object {
    "ATT_BC_REVTCOUNT1": Array [
      100000,
      200000,
      300000,
      400000,
      500000,
    ],
    "TMMGT_BC_VIRTCHAN3": Array [
      100000,
      200000,
      300000,
      300100,
      400000,
      500000,
    ],
  },
  "lines": Object {
    "ATT_BC_REVTCOUNT1": Array [
      Object {
        "color": "darkred",
        "masterTime": 100020,
        "symbol": 149.30028143545633,
        "value": 149.30028143545633,
        "x": 100000,
      },
      Object {
        "color": "blue",
        "masterTime": 200020,
        "symbol": 154.3002814355,
        "value": 154.3002814355,
        "x": 200000,
      },
      Object {
        "color": "green",
        "masterTime": 300020,
        "symbol": 159.3002814355,
        "value": 159.3002814355,
        "x": 300000,
      },
      Object {
        "color": "green",
        "masterTime": 400020,
        "symbol": 164.3002814355,
        "value": 164.3002814355,
        "x": 400000,
      },
      Object {
        "color": "green",
        "masterTime": 500020,
        "symbol": 169.3002814355,
        "value": 169.3002814355,
        "x": 500000,
      },
    ],
    "TMMGT_BC_VIRTCHAN3": Array [
      Object {
        "color": "darkred",
        "masterTime": 100020,
        "symbol": 139.30028143545633,
        "value": 139.30028143545633,
        "x": 100000,
      },
      Object {
        "color": "blue",
        "masterTime": 200020,
        "symbol": 144.3002814355,
        "value": 144.3002814355,
        "x": 200000,
      },
      Object {
        "color": "green",
        "masterTime": 300020,
        "symbol": 149.3002814355,
        "value": 149.3002814355,
        "x": 300000,
      },
      Object {
        "color": "green",
        "masterTime": 300100,
        "symbol": 150,
        "value": 150,
        "x": 300100,
      },
      Object {
        "color": "green",
        "masterTime": 400020,
        "symbol": 154.3002814355,
        "value": 154.3002814355,
        "x": 400000,
      },
      Object {
        "color": "green",
        "masterTime": 500020,
        "symbol": 159.3002814355,
        "value": 159.3002814355,
        "x": 500000,
      },
    ],
  },
  "max": Object {
    "ATT_BC_REVTCOUNT1": 169.3002814355,
    "TMMGT_BC_VIRTCHAN3": 159.30028143545633,
  },
  "maxTime": Object {
    "ATT_BC_REVTCOUNT1": 500000,
    "TMMGT_BC_VIRTCHAN3": 500000,
  },
  "min": Object {
    "ATT_BC_REVTCOUNT1": 149.30028143545633,
    "TMMGT_BC_VIRTCHAN3": 139.30028143545633,
  },
  "minTime": Object {
    "ATT_BC_REVTCOUNT1": 100000,
    "TMMGT_BC_VIRTCHAN3": 100000,
  },
}
`;

exports[`viewManager/PlotView/store/viewDataUpdate viewRangeAdd should add points points everywhere 1`] = `
Object {
  "indexes": Object {
    "ATT_BC_REVTCOUNT1": Array [
      100000,
      200000,
      300000,
      300010,
      400000,
      500000,
      500010,
    ],
    "TMMGT_BC_VIRTCHAN3": Array [
      90100,
      100000,
      200000,
      200100,
      300000,
      400000,
      500000,
    ],
  },
  "lines": Object {
    "ATT_BC_REVTCOUNT1": Array [
      Object {
        "color": "darkred",
        "masterTime": 100020,
        "symbol": 149.30028143545633,
        "value": 149.30028143545633,
        "x": 100000,
      },
      Object {
        "color": "blue",
        "masterTime": 200020,
        "symbol": 154.3002814355,
        "value": 154.3002814355,
        "x": 200000,
      },
      Object {
        "color": "green",
        "masterTime": 300020,
        "symbol": 159.3002814355,
        "value": 159.3002814355,
        "x": 300000,
      },
      Object {
        "color": "green",
        "masterTime": 300010,
        "symbol": 159,
        "value": 159,
        "x": 300010,
      },
      Object {
        "color": "green",
        "masterTime": 400020,
        "symbol": 164.3002814355,
        "value": 164.3002814355,
        "x": 400000,
      },
      Object {
        "color": "green",
        "masterTime": 500020,
        "symbol": 169.3002814355,
        "value": 169.3002814355,
        "x": 500000,
      },
      Object {
        "color": "green",
        "masterTime": 500020,
        "symbol": 169,
        "value": 169,
        "x": 500010,
      },
    ],
    "TMMGT_BC_VIRTCHAN3": Array [
      Object {
        "color": "darkred",
        "masterTime": 90100,
        "symbol": 139,
        "value": 139,
        "x": 90100,
      },
      Object {
        "color": "darkred",
        "masterTime": 100020,
        "symbol": 139.30028143545633,
        "value": 139.30028143545633,
        "x": 100000,
      },
      Object {
        "color": "blue",
        "masterTime": 200020,
        "symbol": 144.3002814355,
        "value": 144.3002814355,
        "x": 200000,
      },
      Object {
        "color": "blue",
        "masterTime": 200100,
        "symbol": 144,
        "value": 144,
        "x": 200100,
      },
      Object {
        "color": "green",
        "masterTime": 300020,
        "symbol": 149.3002814355,
        "value": 149.3002814355,
        "x": 300000,
      },
      Object {
        "color": "green",
        "masterTime": 400020,
        "symbol": 154.3002814355,
        "value": 154.3002814355,
        "x": 400000,
      },
      Object {
        "color": "green",
        "masterTime": 500020,
        "symbol": 159.3002814355,
        "value": 159.3002814355,
        "x": 500000,
      },
    ],
  },
  "max": Object {
    "ATT_BC_REVTCOUNT1": 169.3002814355,
    "TMMGT_BC_VIRTCHAN3": 159.30028143545633,
  },
  "maxTime": Object {
    "ATT_BC_REVTCOUNT1": 500000,
    "TMMGT_BC_VIRTCHAN3": 500000,
  },
  "min": Object {
    "ATT_BC_REVTCOUNT1": 149.30028143545633,
    "TMMGT_BC_VIRTCHAN3": 139,
  },
  "minTime": Object {
    "ATT_BC_REVTCOUNT1": 100000,
    "TMMGT_BC_VIRTCHAN3": 90100,
  },
}
`;
